--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Huedollar">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="manifest" href="manifest.json">
   <title>Huedollar</title>
 </head>
 <body class="hue-success">
